--- a/src/app/components/learn-new-facts/learn-new-facts.component.html
+++ b/src/app/components/learn-new-facts/learn-new-facts.component.html
@@ -7,13 +7,17 @@
   <button (click)='getFacts()'>Get interesting data about the dates</button>
 </div>
 
-<table>
-  <tr>
-    <th>Dates</th>
-    <th>Historical facts</th>
-  </tr>
-  <tr *ngFor="let item of factsArr">
-    <td>{{ item.date }}</td>
-    <td>{{ item.fact }}</td>
-  </tr>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">Dates</th>
+      <th scope="col">Historical facts</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of factsArr">
+      <td>{{ item.date }}</td>
+      <td>{{ item.fact }}</td>
+    </tr>
+  </tbody>
 </table>
