App running, improvements to make on handling errors

--- a/src/app/components/facts-list/facts-list.component.html
+++ b/src/app/components/facts-list/facts-list.component.html
@@ -1,19 +1,22 @@
-<section>
+<section class='collection container p-0 flex-column align-items-start'>
 
-  <h3>Your facts collection</h3>
+  <h3>Your complete facts collection</h3>
 
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th scope="col">Dates</th>
-        <th scope="col">Historical facts</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let fact of facts">
-        <td>{{ fact.date }}</td>
-        <td>{{ fact.fact }}</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class='row justify-content-center'>
+    <table class="table table-striped">
+      <thead class="thead-dark">
+        <tr class='row'>
+          <th class='col-3' scope="col">Dates</th>
+          <th class='col-9' scope="col">Historical facts</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class='row' *ngFor="let item of facts">
+          <td class='col-3'>{{ item.date }}</td>
+          <td class='col-9'>{{ item.fact }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
 </section>
