Refresh pb ok on page 1

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,15 +2,15 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" routerLink="learn-new-facts"><img [src]='piPicture' id="pi" alt='pi number'></a>
+  <a class="navbar-brand" routerLink="/"><img [src]='piPicture' id="pi" alt='pi number'></a>
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-0 mt-2 mt-lg-0">
       <li class="nav-item mr-2">
-        <a class="nav-link" routerLink="learn-new-facts">Choose your dates</a>
+        <a class="nav-link" routerLink="/">Choose your dates</a>
       </li>
       <li class="nav-item mr-2">
-        <a class="nav-link" routerLink="facts-list">Your facts list</a>
+        <a class="nav-link" routerLink="/facts-list">Your facts list</a>
       </li>
     </ul>
   </div>
