--- a/front-end/src/app/components/learn-new-facts/learn-new-facts.component.scss
+++ b/front-end/src/app/components/learn-new-facts/learn-new-facts.component.scss
@@ -1,24 +1,28 @@
 @import'../../../styles.scss';
 
-.form{
-    min-height: 90vh;
+.form {
     margin-top: 10vh;
+    min-height: 90vh;
     width:100vw;
 
     h3, th {
         font-family: $fontTitle;
     }
 
-    p, button, td{
+    p, button, td {
         font-family: $fontText;
+    }
+
+    .getFacts {
+        margin-top: 5vh;
     }
 
     .pict1 {
         display: flex;
         justify-content: space-around;
         #pi {
-            width: 50px;
             height: 70px;
+            width: 50px;
         }
     }
 
@@ -26,12 +30,12 @@
         margin-top: 5vh;
     }
 
-    .input{
+    .input {
         width: 100%;
     }
 
-    .table{
-        width: 80%;
+    .table {
         margin-top: 10vh;
+        width: 80%;
     }
 }
