--- a/front-end/src/app/components/facts-list/facts-list.component.html
+++ b/front-end/src/app/components/facts-list/facts-list.component.html
@@ -3,6 +3,10 @@
   <h3>Your complete facts collection</h3>
 
   <div class='row justify-content-center'>
+  <button class='col-4 btn btn-light' (click)="goBack()">Go back to learn more facts</button>
+  </div>
+
+  <div class='row justify-content-center'>
     <table class="table table-striped">
       <thead class="thead-dark">
         <tr class='row'>
