--- a/front-end/src/app/components/navbar/navbar.component.html
+++ b/front-end/src/app/components/navbar/navbar.component.html
@@ -25,7 +25,8 @@
     <ul class="navbar-nav mr-0 mt-2 mt-lg-0">
       <li class="nav-item mr-2">
         <a class="nav-link" 
-          routerLink="/"
+          routerLink="/home"
+          routerLinkActive='activeClass'
         >
           Choose your dates
         </a>
@@ -33,6 +34,7 @@
       <li class="nav-item mr-2">
         <a class="nav-link" 
           routerLink="/facts-list"
+          routerLinkActive='activeClass'
         >
           Your facts list
         </a>
