--- a/front-end/src/app/components/navbar/navbar.component.scss
+++ b/front-end/src/app/components/navbar/navbar.component.scss
@@ -1,5 +1,10 @@
 @import'../../../styles.scss';
 
+
+.activeClass {
+    color: #ccccff !important;
+}
+
 .pict1 {
     display: flex;
     justify-content: space-around;
