--- a/front-end/src/app/components/learn-new-facts/learn-new-facts.component.scss
+++ b/front-end/src/app/components/learn-new-facts/learn-new-facts.component.scss
@@ -12,8 +12,13 @@
         font-family: $fontTitle;
     }
 
-    p, button, td {
+    p, button, td, span {
         font-family: $fontText;
+    }
+
+    #quote {
+        font-family: $fontQuotes;
+        font-size: 24px;
     }
 
     .getFacts {
