--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -1,2 +1,3 @@
-$fontText : 'Dosis', sans-serif;
-$fontTitle : 'Raleway', sans-serif;
+$fontText: 'Dosis', sans-serif;
+$fontTitle: 'Raleway', sans-serif;
+$fontQuotes: 'Satisfy', cursive;
