--- a/front-end/src/app/components/facts-list/facts-list.component.html
+++ b/front-end/src/app/components/facts-list/facts-list.component.html
@@ -1,6 +1,6 @@
 <section class='collection container p-0 flex-column align-items-start'>
 
-  <h3>Your complete facts collection</h3>
+  <h3>Your facts collection</h3>
 
   <div class='row justify-content-center'>
   <button class='col-4 btn btn-light' (click)="goBack()">Go back to learn more facts</button>
