removed unused onInit, constructor

--- a/front-end/src/app/components/learn-new-facts/learn-new-facts.component.html
+++ b/front-end/src/app/components/learn-new-facts/learn-new-facts.component.html
@@ -4,7 +4,7 @@
 
     <div class='row justify-content-center'>
       <h3 class='col-10 text-center'>
-        Welcome to Julia's numbers API app !
+        Welcome to Julia's historical dates app !
       </h3>
       <p class='col-12 text-center'>
         If your want to learn historical facts about one or more dates, this app is made for you.
