--- a/front-end/src/app/components/facts-list/facts-list.component.html
+++ b/front-end/src/app/components/facts-list/facts-list.component.html
@@ -1,4 +1,4 @@
-<section class='collection container p-0 flex-column align-items-start'>
+<section class='collection container p-0 flex-column align-items-center'>
 
   <h3>Your facts collection</h3>
 
@@ -6,10 +6,10 @@
   <button class='col-4 btn btn-light' (click)="goBack()">Go back to learn more facts</button>
   </div>
 
-  <div class='row justify-content-center'>
+  <div class='row mx-0 justify-content-center factsTable'>
     <table class="table table-striped">
       <thead class="thead-dark">
-        <tr class='row'>
+        <tr class='row mx-0'>
           <th class='col-3' 
             scope="col"
           >
@@ -23,7 +23,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr class='row' 
+        <tr class='row mx-0' 
           *ngFor="let item of facts"
         >
           <td class='col-3'>{{ item.date }}</td>
